--- a/templates/leafletting.html
+++ b/templates/leafletting.html
@@ -65,15 +65,15 @@ word-wrap: break-word;
 
       <!-- Street Search Column -->
       <div class="column">
-        <h2>Register Voters with their ENOP (XXX-YYY.S):</h2>
-        {% for tag, desc in marked_tags.items() %}
-          <label for="enop-input-{{ tag }}"><strong>{{ tag }}</strong>: {{ desc }}</label>
-          <input type="text" id="enop-input-{{ tag }}" placeholder="Enter ENOP for {{ tag }}">
-          <button type="button" onclick="checkEnop('{{ tag }}')">Telling</button>
-          <ul id="enop-results-{{ tag }}" class="results"></ul>
+        <h2>Register Leaflet Tag (L*) coverage complete for streets:</h2>
+        {% for tag, desc in leaflet_tags.items() %}
+          <label for="street-input-{{ tag }}"><strong>{{ tag }}</strong>: {{ desc }}</label>
+          <input type="text" id="street-input-{{ tag }}" placeholder="Search Street Name for {{ tag }}" oninput="filterStreets('{{ tag }}')">
+          <ul id="street-results-{{ tag }}" class="results"></ul>
         {% endfor %}
-        <h3>Elector Telling Log</h3>
-        <ul id="elector-tagging-log" style="max-height: 200px; overflow-y: auto; border: 1px solid #ccc; padding: 10px;"></ul>
+
+        <h3>Street Delivery Telling Log</h3>
+        <ul id="street-tagging-log" style="max-height: 200px; overflow-y: auto; border: 1px solid #ccc; padding: 10px;"></ul>
 
       </div>
     </div>
