--- a/static/style.css
+++ b/static/style.css
@@ -300,8 +300,9 @@ font-size: 1.5em;
 
 .login-container {
 	position: absolute;
-  width: 500px;
-  height: 400px;
+  width: 100%;
+  height: 100%
+  max-height: 400px;
   z-index: 15;
   top: 50%;
   left: 50%;
