--- a/static/style.css
+++ b/static/style.css
@@ -221,9 +221,22 @@ font-size: 1.5em;
 	padding-left : 5px;
 }
 
+.leftedmerge {
+	text-align: left;
+	padding-left : 5px;
+   border-right: none;
+}
+
 .righted {
 	text-align: right;
 	padding-right : 5px;
+
+}
+
+.rightedmerge {
+	text-align: right;
+	padding-right : 5px;
+  border-left: none;
 }
 
 .coded {
