--- a/static/style.css
+++ b/static/style.css
@@ -225,7 +225,7 @@ font-size: 1.5em;
 	text-align: left;
 	padding-left : 5px;
    border-right: none;
-   text-wrap :no-wrap;
+   white-space: nowrap;
 }
 
 .righted {
