--- a/templates/canvasscard1.html
+++ b/templates/canvasscard1.html
@@ -5,7 +5,7 @@
 		<title>V3.3 electtrek canvassing</title>
 
 	<div id="header">
-    <h1>Postal and Non Postal Vote Canvass Cards </h1>
+    <h1>Voter Canvass Cards (including postal)</h1>
 		<span>
 			<b>Ward: {{ prodstats['ward'] }} ,</b>
 		</span>
